<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    app:cardElevation="@dimen/_6sdp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="@dimen/_8sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/search_sora_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/_6sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp" />
            <TextView
                android:id="@+id/search_sora_detals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:textColor="@color/white"
                android:padding="@dimen/_6sdp"
                android:textSize="@dimen/_8ssp"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:id="@+id/search_ayah_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_result_text_of_ayah"
            android:textSize="@dimen/_18ssp"
            android:padding="@dimen/_6sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/search_btn_move"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/search_btn_background"
                android:text="@string/search_btn_move"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/search_btn_tafseer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/search_btn_background"
                android:text="@string/search_btn_tafseer"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>